test/types/scalar/kbrady/int_uint.good
0
127
32767
2147483647
9223372036854775807
int_uint.chpl:6: error: halt reached - casting int(64) less than 0 to uint(64)
