test/types/scalar/kbrady/int_uint.chpl
writeln(0.safeCast(uint));
writeln(max(int(8)).safeCast(uint));
writeln(max(int(16)).safeCast(uint));
writeln(max(int(32)).safeCast(uint));
writeln(max(int(64)).safeCast(uint));
writeln((-1).safeCast(uint));
